--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -20,7 +20,7 @@
           = link_to "<span class='glyphicon glyphicon-volume-down'></span>".html_safe, "/volume_down", class: "btn btn-default", id: "volume_down", disabled: false
           = link_to "<span class='glyphicon glyphicon-volume-up'></span>".html_safe, "/volume_up", class: "btn btn-default", id: "volume_up", disabled: false
         = link_to "<span class='glyphicon glyphicon-record'></span>".html_safe, "/spin", class: "btn btn-default", id: "spin"
-        .btn-group
+        .btn-group#vote_buttons
           = link_to "<span class='glyphicon glyphicon-thumbs-down'></span>".html_safe, "/lame", class: "btn btn-default", id: "lame"
           = link_to "<span class='glyphicon glyphicon-minus'></span>".html_safe, "/meh", class: "btn btn-default", id: "meh"
           = link_to "<span class='glyphicon glyphicon-thumbs-up'></span>".html_safe, "/awesome", class: "btn btn-default", id: "awesome"
