--- a/app/assets/javascripts/chat.js.erb
+++ b/app/assets/javascripts/chat.js.erb
@@ -342,11 +342,13 @@ $( document ).ready( function() {
 
     if ( current_dj != null && me.id == current_dj.id ) {
       $( '#vote_buttons a' ).addClass( 'disabled' );
+      var chat_text = '<div class="well well-sm">' + current_dj.name + ' started spinning "' + what.song.title + '" by ' + what.song.artist + '.</div>';
     } else {
       $( '#vote_buttons a' ).removeClass( 'disabled' );
+      var chat_text = '<div class="well well-sm">Walt started spinning "' + what.song.title + '" by ' + what.song.artist + '.</div>';
     }
 
-    $("#chat_text").append( '<div class="well well-sm">' + current_dj.name + ' started spinning "' + what.song.title + '" by ' + what.song.artist + '.</div>' );
+    $("#chat_text").append( chat_text );
     $("#chat_text").stop().animate({
       scrollTop: $('#chat_text')[0].scrollHeight
     }, 800);
