--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -44,9 +44,13 @@
                 = queued_song.song.artist
             .col-sm-2.text-right
               .queue_tools
-                - unless queued_song.sequence == 0
+                - if queued_song.sequence == 0
+                  = link_to "<span class='glyphicon glyphicon-chevron-up'></span>".html_safe, "/move_up_queue", class: 'btn btn-default btn-xs move_up_queue', id: "move_up_queue_#{ queued_song.id }", disabled: true
+                - else
                   = link_to "<span class='glyphicon glyphicon-chevron-up'></span>".html_safe, "/move_up_queue", class: 'btn btn-default btn-xs move_up_queue', id: "move_up_queue_#{ queued_song.id }"
-                - unless queued_song.sequence == current_rudy.queued_songs.count - 1
+                - if queued_song.sequence == current_rudy.queued_songs.count - 1
+                  = link_to "<span class='glyphicon glyphicon-chevron-down'></span>".html_safe, "/move_down_queue", class: 'btn btn-default btn-xs move_down_queue', id: "move_down_queue_#{ queued_song.id }", disabled: true
+                - else
                   = link_to "<span class='glyphicon glyphicon-chevron-down'></span>".html_safe, "/move_down_queue", class: 'btn btn-default btn-xs move_down_queue', id: "move_down_queue_#{ queued_song.id }"
                 = link_to "<span class='glyphicon glyphicon-minus-sign'></span>".html_safe, "/remove_from_queue", class: 'btn btn-success btn-xs remove_from_queue', id: "library_list_remove_#{ queued_song.id }"
         #search_results
