--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,7 @@
       .header
         %ul.nav.nav-pills.pull-right
           - if rudy_signed_in?
+            %li= link_to "Profile", edit_rudy_registration_path
             %li= link_to "Sign out",  destroy_rudy_session_path, method: :delete
           - else
             %li{ class: url_for == new_rudy_session_path      ? "active" : nil }= link_to "Sign in", new_rudy_session_path
