Fixed ajax update call

--- a/app/assets/javascripts/chat.js.erb
+++ b/app/assets/javascripts/chat.js.erb
@@ -576,13 +576,13 @@ $( document ).ready( function() {
     alert('Name: ' + name + '\nEmail: ' + email + '\nPW: ' + pw + '\nPW Confirm: ' + pw_confirm + '\nCur PW: ' + cur_pw);
     var request = $.ajax({
       url: "/rudies",
-      type: "POST",
-      data: {name: name, email: email, password: pw, password_confirmation: pw_confirm, current_password: cur_pw },
+      type: "PUT",
+      data: {rudy: { name: name, email: email, password: pw, password_confirmation: pw_confirm, current_password: cur_pw } },
       success: function(data, msg){
         alert('Worked!\n' + msg + '\n' + data);
       },
       error: function(data, msg){
-        alert('Failed! ' + msg);
+        alert('Failed! ' + data.toString());
       },
       complete: function() {
       $("#updateProfileSubmitSpinner").addClass('hidden');
